fix z-index issues until proper rewrite when migrating to bootstrap

--- a/src/scss/screen.scss
+++ b/src/scss/screen.scss
@@ -27,7 +27,7 @@ $title: #CE4F07;
   /* from http://www.sitepoint.com/pure-css3-paper-curl/ by Craig Buckler */
   position: relative;
   /*width: 500px;*/
-  z-index: 10;
+  /*z-index: 10;*/
   padding: 50px;
   margin: 0 auto;
   background-color: #fff;
@@ -50,7 +50,7 @@ $title: #CE4F07;
     -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
-    z-index: 9;}
+    z-index: -1;}
   &:after{
     left: auto;
     right: 12px;
@@ -197,7 +197,7 @@ body {
   display: none;
   background-color: $overlay-bg;
   position: absolute;
-  z-index: 20;
+  z-index: 12;
   width: 100%;
   height: 100%;
   opacity: 0.8; }
@@ -549,7 +549,7 @@ footer.ui-widget {
 #feedback-bar {
   position: fixed;
   z-index: 13;
-  top: 25px;
+  top: -35px;
   /* invisible initially (header top: 80 - #feedback height - #feedback paddingx2)*/
   width: 100%;
   min-height: 35px;
